i3 config - title bar removed

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -163,6 +163,10 @@ exec xinput set-float-prop 11 297 0.900000
 
 hide_edge_borders both
 
+#Hidding titlebar
+for_window [class="^.*"] border pixel 1
+new_window 1pixel
+
 #######
 #THEME#
 #######
