--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 !init.vim
 !.local/share/nvim/plugged/iceberg.vim/colors/iceberg.vim
 !.local/share/nvim/plugged/iceberg.vim/autoload/airline/themes/iceberg.vim
+!iceberg-minimal.terminal
